Se agrega primer versión de blockly para python

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
 
   <!-- The app hooks into this div -->
   <div id="app"></div>
+   </div>
 
   <!-- Open Sans Font -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
