Se agregan cambios finales

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,14 @@
   <link rel="icon" href="/favicon.ico" />
   <title>React.js Boilerplate</title>
 </head>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/7.2.3/firebase-app.js"></script>
 
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
 <body>
   <!-- Display a message if JS has been disabled on the browser. -->
   <noscript>If you're seeing this message, that means
@@ -27,7 +34,7 @@
 
   <!-- Open Sans Font -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-
+<!-- <iframe src="https://trinket.io/embed/blocks/1acc5971e4" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe> -->
   <!-- A lot of magic happens in this file. HtmlWebpackPlugin automatically injects all assets (e.g. bundle.js, main.css) with the correct HTML tags, which is why they are missing in this file. Don't add any assets here! (Check out webpack.dev.babel.js and webpack.prod.babel.js if you want to know more) -->
 </body>
 
